# specs_test

./: Cargo.toml  README.md
src/: main.rs  renderer.rs  state.rs
src/component/: aabb.rs  body.rs  color.rs  mod.rs  vel.rs
src/physics/: mod.rs  rigid_body.rs
src/renderer/: controller.rs  mod.rs  shader.rs  system.rs
src/terrain/: voronoi.rs
